infrastructure/neuvector-test/test-app/service.yaml
# test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
spec:
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
